--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
   gap: 2rem;
   background-color: #f2f2f2;
   width: 90%;
-  max-width: 1500px;
+  max-width: 93.75rem;
   margin: 5rem auto;
   padding: 5rem 4rem;
 }
@@ -23,6 +23,11 @@
 
 .hero-para {
   font-size: 1.2rem;
+}
+
+.cta-btn {
+  font-size: 1.25rem;
+  padding: 1rem;
 }
 
 @media screen and (max-width: 950px) {
