--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@
   --menu-background: #f7f7f7;
   --body-background: #f2f2f2;
   --text-color: #282828;
-  --menu-hover: #ede9fe;
+  --menu-hover: #dee2e6;
 }
