--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,13 @@
   font-family: "Inter", sans-serif;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 /* top bar/header */
 .top-header {
-  background-color: #f7f7f7;
+  background-color: var(--menu-background);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,21 +24,6 @@
   font-size: 2.5rem;
   color: var(--clr-primary);
   padding: 0 1rem;
-}
-
-.search-bar {
-  display: flex;
-  align-items: center;
-  border: 2px solid var(--input-border);
-}
-
-.search-icon {
-  padding: 0 1rem;
-}
-
-input.search-input {
-  border: none;
-  background-color: #f7f7f7;
 }
 
 .theme-profile-ctn {
@@ -108,6 +97,87 @@ footer p.copyright {
 }
 
 /* notes */
+.search-bar {
+  display: flex;
+  align-items: center;
+  border: 2px solid var(--input-border);
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  margin: 1rem auto;
+  padding: 5px;
+}
+
+.search-icon,
+.filter-icon {
+  padding: 0 8px;
+}
+
+input.search-input {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+}
+
 .notes-ctn {
-  background-color: #f2f2f2;
+  background-color: var(--body-background);
+}
+
+.all-notes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 0 2rem;
+}
+
+.note {
+  border: 1px solid var(--input-border);
+  border-radius: 8px;
+  position: relative;
+  max-width: 600px;
+  width: 100%;
+}
+
+.labels-ctn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 2rem 0 1rem;
+}
+
+.label-chip {
+  padding: 2px 5px;
+  font-size: 14px;
+  background-color: var(--menu-hover);
+}
+
+.note-option-ctn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.note-date {
+  font-size: 14px;
+}
+
+.unpin-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.note-option {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.icon-hover {
+  padding: 0.5rem;
+}
+
+.icon-hover:hover {
+  background-color: var(--menu-hover);
 }
