--- a/src/App.css
+++ b/src/App.css
@@ -96,88 +96,48 @@ footer p.copyright {
   font-size: 14px;
 }
 
-/* notes */
-.search-bar {
+/* Note modal */
+.note-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
   display: flex;
-  align-items: center;
-  border: 2px solid var(--input-border);
-  border-radius: 8px;
-  width: 100%;
-  max-width: 600px;
-  margin: 1rem auto;
-  padding: 5px;
+  justify-content: center;
+  z-index: 1;
 }
 
-.search-icon,
-.filter-icon {
-  padding: 0 8px;
-}
-
-input.search-input {
-  border: none;
-  background-color: transparent;
-  width: 100%;
-}
-
-.notes-ctn {
-  background-color: var(--body-background);
-}
-
-.all-notes {
+.modal-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 1rem;
-  padding: 0 2rem;
-}
-
-.note {
-  border: 1px solid var(--input-border);
-  border-radius: 8px;
-  position: relative;
-  max-width: 600px;
+  max-width: 37.5rem;
   width: 100%;
+  background-color: var(--profile-ctn-background);
+  border-radius: 8px;
+  margin-top: 10rem;
+  height: fit-content;
 }
 
-.labels-ctn {
+.input-title-ctn {
   display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 2rem 0 1rem;
-}
-
-.label-chip {
-  padding: 2px 5px;
-  font-size: 14px;
-  background-color: var(--menu-hover);
-}
-
-.note-option-ctn {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.note-date {
-  font-size: 14px;
-}
-
-.unpin-icon {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-.note-option {
-  display: flex;
-  align-items: center;
   gap: 1rem;
+  align-items: center;
 }
 
-.icon-hover {
+.note-textarea {
+  width: 100%;
+  height: 5rem;
   padding: 0.5rem;
+  font-family: inherit;
+  font-size: inherit;
+  border: 2px solid var(--light-gray);
+  border-radius: 6px;
+  resize: none;
 }
 
-.icon-hover:hover {
+.modal-cta-btn:hover {
   background-color: var(--menu-hover);
 }
