--- a/src/pages/Notes/Notes.css
+++ b/src/pages/Notes/Notes.css
@@ -5,7 +5,7 @@
   border-radius: 8px;
   width: 100%;
   max-width: 600px;
-  margin: 1rem auto;
+  margin: 1rem auto 0;
   padding: 5px;
 }
 
@@ -29,7 +29,7 @@ input.search-input {
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding: 0 2rem;
+  padding: 1rem;
 }
 
 .note {
