feat: added component for empty notes

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,5 @@
   --menu-hover: #dee2e6;
   --priority-background: #ede9fe;
   --profile-ctn-background: #fff;
+  --empty-template-color: #9aa0a6;
 }
