--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
 }
 
 .header-logo {
@@ -53,6 +55,8 @@
   flex-direction: column;
   background-color: var(--menu-background);
   height: calc(100vh - 4rem);
+  position: sticky;
+  top: 4rem;
 }
 
 .menu-ctn {
