--- a/src/pages/Notes/Notes.css
+++ b/src/pages/Notes/Notes.css
@@ -82,3 +82,22 @@ input.search-input {
 .icon-hover:hover {
   background-color: var(--menu-hover);
 }
+
+/* No notes component */
+.empty-note-ctn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  color: var(--empty-template-color);
+  padding-top: 5rem;
+}
+
+.empty-note-icon {
+  font-size: 6rem;
+}
+
+.empty-note-text {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
