--- a/src/pages/Notes/Notes.css
+++ b/src/pages/Notes/Notes.css
@@ -106,3 +106,18 @@ input.search-input {
   font-size: 1.5rem;
   font-weight: 400;
 }
+
+/* Label checkbox list card */
+.label-list-card {
+  position: absolute;
+  right: -20px;
+  bottom: -40px;
+  max-width: 12.5rem;
+  width: 100%;
+  background-color: var(--body-background);
+  box-shadow: var(--dark-shadow);
+}
+
+.label-name {
+  padding-left: 8px;
+}
