--- a/src/pages/Notes/Notes.css
+++ b/src/pages/Notes/Notes.css
@@ -116,6 +116,7 @@ input.search-input {
   width: 100%;
   background-color: var(--body-background);
   box-shadow: var(--dark-shadow);
+  z-index: 1;
 }
 
 .label-name {
