feat: added dark theme

--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,18 @@
   --priority-background: #ede9fe;
   --profile-ctn-background: #fff;
   --empty-template-color: #9aa0a6;
+  --filters-background: #f2f2f2;
+  --modal-btn-hover: #dee2e6;
+}
+
+.dark-theme {
+  --menu-background: #171923;
+  --body-background: #1a202c;
+  --text-color: #ffffffeb;
+  --menu-hover: #2d3748;
+  --priority-background: #ede9fe;
+  --profile-ctn-background: #2d3748;
+  --empty-template-color: #9aa0a6;
+  --filters-background: #2d3748;
+  --modal-btn-hover: #9aa0a6;
 }
