--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
   display: flex;
   align-items: center;
   padding-right: 3rem;
+  color: var(--text-color);
 }
 
 .theme-icon {
@@ -135,6 +136,7 @@ footer p.copyright {
   max-width: 37.5rem;
   width: 100%;
   background-color: var(--profile-ctn-background);
+  color: var(--text-color);
   border-radius: 8px;
   margin-top: 10rem;
   height: fit-content;
@@ -156,10 +158,12 @@ footer p.copyright {
   border: 2px solid var(--light-gray);
   border-radius: 6px;
   resize: none;
+  background-color: transparent;
+  color: var(--text-color);
 }
 
 .modal-cta-btn:hover {
-  background-color: var(--menu-hover);
+  background-color: var(--modal-btn-hover);
 }
 
 /* Edit label modal */
@@ -172,11 +176,15 @@ footer p.copyright {
   width: 100%;
   height: fit-content;
   margin-top: 10rem;
+  color: var(--text-color);
 }
 
 input.input-no-border {
   border: none;
   width: 100%;
+  background-color: transparent;
+  border-radius: 0;
+  color: var(--text-color);
 }
 
 input.input-no-border:focus {
