--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -41,6 +41,8 @@ input.input-field {
   font-size: inherit;
   border: 2px solid var(--light-gray);
   border-radius: 6px;
+  background-color: transparent;
+  color: var(--text-color);
 }
 
 input:focus {
