--- a/src/pages/Notes/Notes.css
+++ b/src/pages/Notes/Notes.css
@@ -8,6 +8,7 @@
   margin: 1rem auto 0;
   padding: 5px;
   position: relative;
+  color: var(--text-color);
 }
 
 .search-icon,
@@ -19,10 +20,12 @@ input.search-input {
   border: none;
   background-color: transparent;
   width: 100%;
+  color: var(--text-color);
 }
 
 .notes-ctn {
   background-color: var(--body-background);
+  color: var(--text-color);
 }
 
 .all-notes {
@@ -39,6 +42,7 @@ input.search-input {
   position: relative;
   max-width: 37.5rem;
   width: 100%;
+  color: var(--text-color);
 }
 
 .labels-ctn {
@@ -115,7 +119,7 @@ input.search-input {
   bottom: -40px;
   max-width: 12.5rem;
   width: 100%;
-  background-color: var(--body-background);
+  background-color: var(--filters-background);
   box-shadow: var(--dark-shadow);
   z-index: 1;
 }
@@ -126,7 +130,7 @@ input.search-input {
 
 /* color palette */
 .color-palette {
-  background-color: var(--body-background);
+  background-color: var(--filters-background);
   position: absolute;
   gap: 8px;
   bottom: -3.1rem;
@@ -171,7 +175,7 @@ input.search-input {
   gap: 8px;
   position: absolute;
   bottom: -6rem;
-  background-color: var(--body-background);
+  background-color: var(--filters-background);
   box-shadow: var(--dark-shadow);
   z-index: 1;
 }
@@ -184,7 +188,7 @@ input.search-input {
 /* Filter Icon */
 .filter-ctn {
   position: absolute;
-  background-color: var(--body-background);
+  background-color: var(--filters-background);
   bottom: -5rem;
   right: -16.5rem;
   box-shadow: var(--dark-shadow);
