--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,10 @@
   z-index: 1;
 }
 
+.mobile-menu-icon {
+  display: none;
+}
+
 .header-logo {
   font-family: "Parisienne", sans-serif;
   font-size: 2.5rem;
@@ -73,6 +77,7 @@
   position: sticky;
   top: 4rem;
   z-index: 2;
+  min-width: 15rem;
 }
 
 .menu-ctn {
@@ -193,4 +198,29 @@ input.input-no-border:focus {
 
 .label-list-icon {
   font-size: 1.25rem;
+}
+
+@media screen and (max-width: 900px) {
+  .mobile-menu-icon {
+    display: block;
+    font-size: 2.5rem;
+    color: var(--text-color);
+    padding-left: 1rem;
+  }
+
+  .app-ctn {
+    display: block;
+    min-height: 100vh;
+    height: 100%;
+  }
+
+  .side-menu {
+    position: fixed;
+    left: 0;
+    min-height: 100vh;
+    height: 100%;
+    transform: translate(-100%);
+    transition: transform 0.3s linear;
+    z-index: 2;
+  }
 }
