--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
+  transition: background-color 0.2s linear;
   z-index: 1;
 }
 
@@ -76,6 +77,7 @@
   height: calc(100vh - 4rem);
   position: sticky;
   top: 4rem;
+  transition: background-color 0.2s linear;
   z-index: 2;
   min-width: 15rem;
 }
@@ -84,6 +86,15 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+}
+
+.mobile-logo-close {
+  display: none;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-link {
@@ -201,11 +212,19 @@ input.input-no-border:focus {
 }
 
 @media screen and (max-width: 900px) {
+  .header-logo {
+    padding: 0.5rem 1rem;
+  }
+
   .mobile-menu-icon {
     display: block;
     font-size: 2.5rem;
     color: var(--text-color);
     padding-left: 1rem;
+  }
+
+  .theme-profile-ctn {
+    padding-right: 1rem;
   }
 
   .app-ctn {
@@ -217,10 +236,27 @@ input.input-no-border:focus {
   .side-menu {
     position: fixed;
     left: 0;
+    top: 0;
     min-height: 100vh;
     height: 100%;
     transform: translate(-100%);
     transition: transform 0.3s linear;
     z-index: 2;
+  }
+
+  .side-menu.show-menu {
+    transform: translate(0);
+  }
+
+  .mobile-logo-close {
+    display: flex;
+  }
+
+  .add-note-cta {
+    display: none;
+  }
+
+  .modal-content {
+    width: 90%;
   }
 }
